Refactoring and swagger implementation
