# handlers/post_products.go
@@ -6,7 +6,14 @@ import (
 	"github.com/gr8abbasi/go-microservice/data"
 )
 
-//POST request to add product
+// swagger:route POST /products products createProduct
+// Create a new product
+// responses:
+// 	200: productsResponse
+//	422: errorValidation
+//  501: errorResponse
+
+// Create handles POST requests to add new products
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle POST Product")
 
